restoran menu bootstrap

--- a/restaurant_template-master_bootstrap/index.html
+++ b/restaurant_template-master_bootstrap/index.html
@@ -45,10 +45,37 @@
                     <button class="header__btn">ЗАКАЗ СТОЛИКА</button>
                 </div>
             </div>
-            <div class="menu__btn">
-                <div></div>
-                <div></div>
-                <div></div>
+            <div class="burger">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+                <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
+                    <div class="d-flex flex-column align-items-center">
+                        <ul class="menu d-flex align-items-center">
+                            <li><a href="#" class="menu__link">ГЛАВНАЯ</a></li>
+                            <li><a href="#" class="menu__link">МЕНЮ</a></li>
+                            <li><a href="#" class="menu__link">О НАС</a></li>
+                            <li><a href="#" class="menu__link">БРОНЬ</a></li>
+                            <li><a href="#" class="menu__link"><img src="image/shopping-cart-solid.svg" alt="cart"></a>
+                            </li>
+                        </ul>
+                        <div class="order d-flex">
+                            <div class="contacts">
+                                <div class="order__phone d-flex align-items-center">
+                                    <img src="image/phone.png" alt="phone">
+                                    <a href="tel:9998887654" class="phone">+999-888-76-54</a>
+                                </div>
+                                <p>Свяжитесь с нами для <br>
+                                    бронирования</p>
+                            </div>
+                            <button class="header__btn">ЗАКАЗ СТОЛИКА</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="header__title d-flex flex-column align-items-center">
@@ -82,8 +109,6 @@
         </div>
     </div>
 </header>
-
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
